# name: TestUpdate.test[uvloop]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'primary_group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
    },
  }
---
# name: TestUpdate.test_non_existent_primary_group[uvloop]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Non-existent group: managers',
  }
---
# name: TestUpdate.test_not_a_member_of_primary_group[uvloop]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'User is not member of group',
  }
---
# name: TestUpdate.test_not_found[uvloop]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'User does not exist',
  }
---
# name: TestUpdate.test_short_password[uvloop]
  <class 'dict'> {
    'id': 'bad_request',
    'message': 'Password does not meet minimum length requirement (8)',
  }
---
# name: TestUpdate.test_with_groups[uvloop]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': True,
    },
    'primary_group': None,
  }
---
# name: test_create[uvloop-None]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'id': 'fb085f7f',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_create[uvloop-None].2
  <class 'dict'> {
    '_id': 'fb085f7f',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'fred',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: test_create[uvloop-None][location]
  '/users/fb085f7f'
---
# name: test_find[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': True,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bob',
        'id': 'test',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'leeashley',
        'id': 'bf1b993c',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
      <class 'dict'> {
        'administrator': False,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'zclark',
        'id': 'fb085f7f',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': False,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': None,
      },
    ],
    'found_count': 3,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_find[uvloop-test]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'administrator': True,
        'force_reset': False,
        'groups': <class 'list'> [
        ],
        'handle': 'bob',
        'id': 'test',
        'last_password_change': '2015-10-06T20:00:00Z',
        'permissions': <class 'dict'> {
          'cancel_job': False,
          'create_ref': False,
          'create_sample': True,
          'modify_hmm': False,
          'modify_subtraction': False,
          'remove_file': False,
          'remove_job': False,
          'upload_file': False,
        },
        'primary_group': 'technician',
      },
    ],
    'found_count': 1,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 3,
  }
---
# name: test_get[uvloop-200]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'bf1b993c',
        'name': 'musicians',
      },
      <class 'dict'> {
        'id': 'fb085f7f',
        'name': 'hydrogeologists',
      },
    ],
    'handle': 'qtaylor',
    'id': '7cf872dc',
    'last_password_change': '2015-10-06T20:00:00Z',
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': <class 'dict'> {
      'id': 'bf1b993c',
      'name': 'musicians',
    },
  }
---
# name: test_get[uvloop-404]
  <class 'dict'> {
    'id': 'not_found',
    'message': 'Not found',
  }
---
